--- a/Harden System Security/Strings/en-US/SecurityMeasures.resw
+++ b/Harden System Security/Strings/en-US/SecurityMeasures.resw
@@ -811,9 +811,6 @@
 <data name="TLSCipherSuiteDenyList6-Edge" xml:space="preserve">
     <value>Disable TLS_RSA_WITH_AES_256_GCM_SHA384 - (NO PFS)</value>
 </data>
-<data name="ExtensionManifestV2AvailabilityEdge-Edge" xml:space="preserve">
-    <value>Never disable Manifest V2 extension support</value>
-</data>
 <data name="DefaultWebUsbGuardSettingEdge-Edge" xml:space="preserve">
     <value>Never let websites ask to access local USB connected devices</value>
 </data>
@@ -942,5 +939,14 @@
 </data>
 <data name="DisableTLS11ServerPart2-TLS" xml:space="preserve">
     <value>Disable TLS v1.1 Server - Part 2</value>
+</data>
+<data name="CreateCustomEventViewerViews-Miscellaneous" xml:space="preserve">
+    <value>Create custom views in the Windows Event Viewer for easy access to important security events.</value>
+</data>
+<data name="SecureSSHMACs-Miscellaneous" xml:space="preserve">
+    <value>Configure the SSH client's configurations to use secure MACs (Message Authentication Codes).</value>
+</data>
+<data name="EnableOtherLogonLogOffAudit-Miscellaneous" xml:space="preserve">
+    <value>Enable auditing and tracking Lock Screen locks and unlocks.</value>
 </data>
 </root>
