--- a/Harden System Security/Strings/hi-IN/Resources.resw
+++ b/Harden System Security/Strings/hi-IN/Resources.resw
@@ -3574,4 +3574,55 @@
   <data name="DeleteCertMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
     <value>चयनित प्रमाणपत्र हटाएँ</value>
   </data>
+   <data name="CheckingSSHClientUserConfiguration" xml:space="preserve">
+  <value>SSH क्लाइंट उपयोगकर्ता कॉन्फ़िगरेशन की जाँच</value>
+</data>
+<data name="UserDirectoryNotFoundSkippingSSHClientConfigurationCheck" xml:space="preserve">
+  <value>उपयोगकर्ता निर्देशिका {0} पर नहीं मिली क्योंकि उपयोगकर्ता नाम {1} मान्य नहीं था, SSH क्लाइंट कॉन्फ़िगरेशन जाँच छोड़ी जा रही है.</value>
+</data>
+<data name="SSHClientConfigFileCreatedBecauseDidNotExist" xml:space="preserve">
+  <value>SSH क्लाइंट कॉन्फ़िगरेशन फ़ाइल सामग्री: {0} के साथ बनाई गई क्योंकि वह मौजूद नहीं थी.</value>
+</data>
+<data name="ExistingMACsConfigurationFoundAndReplaced" xml:space="preserve">
+  <value>मौजूदा 'MACs' कॉन्फ़िगरेशन मिला और प्रतिस्थापित किया गया.</value>
+</data>
+<data name="MACsConfigurationNotFoundAddedNew" xml:space="preserve">
+  <value>MACs कॉन्फ़िगरेशन नहीं मिला, नया कॉन्फ़िगरेशन जोड़ा गया.</value>
+</data>
+<data name="CheckingSecureMACsInSSHClientUserConfiguration" xml:space="preserve">
+  <value>SSH क्लाइंट उपयोगकर्ता कॉन्फ़िगरेशन में सुरक्षित MACs की जाँच</value>
+</data>
+<data name="ExistingMACsFoundInUserDirectoryMatchesSecure" xml:space="preserve">
+  <value>उपयोगकर्ता निर्देशिका में MACs कॉन्फ़िगरेशन मिला और वह सुरक्षित कॉन्फ़िगरेशनों से मेल खाता है.</value>
+</data>
+<data name="MACsConfigurationInUserDirectoryIsDifferent" xml:space="preserve">
+  <value>उपयोगकर्ता निर्देशिका में MACs कॉन्फ़िगरेशन अलग है: {0}</value>
+</data>
+<data name="CheckingSecureMACsInSSHClientSystemWideConfiguration" xml:space="preserve">
+  <value>SSH क्लाइंट सिस्टम-व्यापी कॉन्फ़िगरेशन में सुरक्षित MACs की जाँच</value>
+</data>
+<data name="ExistingMACsFoundInSystemWideConfigurationMatchesSecure" xml:space="preserve">
+  <value>सिस्टम-व्यापी कॉन्फ़िगरेशन में MACs कॉन्फ़िगरेशन मिला और वह सुरक्षित कॉन्फ़िगरेशनों से मेल खाता है.</value>
+</data>
+<data name="MACsConfigurationInSystemWideConfigurationIsDifferent" xml:space="preserve">
+  <value>सिस्टम-व्यापी कॉन्फ़िगरेशन में MACs कॉन्फ़िगरेशन अलग है: {0}</value>
+</data>
+<data name="NoSecureMACsFoundInUserAndSystemWideConfigurations" xml:space="preserve">
+  <value>उपयोगकर्ता तथा सिस्टम-व्यापी दोनों कॉन्फ़िगरेशनों में सुरक्षित MACs कॉन्फ़िगरेशन नहीं मिला.</value>
+</data>
+<data name="AttemptingToRemoveMACsFromSSHClientUserConfiguration" xml:space="preserve">
+  <value>SSH क्लाइंट उपयोगकर्ता कॉन्फ़िगरेशन से MACs कॉन्फ़िगरेशन हटाने का प्रयास</value>
+</data>
+<data name="UserDirectoryNotFoundSkippingRemoval" xml:space="preserve">
+  <value>उपयोगकर्ता निर्देशिका {0} पर नहीं मिली क्योंकि उपयोगकर्ता नाम {1} मान्य नहीं था, हटाने को छोड़ा जा रहा है.</value>
+</data>
+<data name="SSHClientConfigurationFileNotFoundNothingToRemove" xml:space="preserve">
+  <value>SSH क्लाइंट कॉन्फ़िगरेशन फ़ाइल नहीं मिली; हटाने के लिए कुछ नहीं है.</value>
+</data>
+<data name="RemovedMACsFromSSHClientUserConfigurationFile" xml:space="preserve">
+  <value>SSH क्लाइंट उपयोगकर्ता कॉन्फ़िगरेशन फ़ाइल से MACs कॉन्फ़िगरेशन हटाया गया.</value>
+</data>
+<data name="NoMACsConfigurationFoundToRemoveInSSHClientUserConfigurationFile" xml:space="preserve">
+  <value>SSH क्लाइंट उपयोगकर्ता कॉन्फ़िगरेशन फ़ाइल में हटाने के लिए MACs कॉन्फ़िगरेशन नहीं मिला.</value>
+</data>
 </root>
