--- a/Harden System Security/Strings/ml-IN/Resources.resw
+++ b/Harden System Security/Strings/ml-IN/Resources.resw
@@ -3574,4 +3574,55 @@
   <data name="DeleteCertMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
     <value>തിരഞ്ഞെടുത്ത സർട്ടിഫിക്കറ്റ് ഇല്ലാതാക്കുക</value>
   </data>
+   <data name="CheckingSSHClientUserConfiguration" xml:space="preserve">
+  <value>SSH ക്ലയന്റ് ഉപയോക്തൃ കോൺഫിഗറേഷൻ പരിശോധiliyor</value>
+</data>
+<data name="UserDirectoryNotFoundSkippingSSHClientConfigurationCheck" xml:space="preserve">
+  <value>ഉപയോക്തൃ ഡയറക്ടറി {0} ൽ കണ്ടെത്താനായില്ല കാരണം ഉപയോക്തൃനാമം {1} സാധുവായതല്ല, SSH ക്ലയന്റ് കോൺഫിഗറേഷൻ പരിശോധന ഒഴിവാക്കുന്നു.</value>
+</data>
+<data name="SSHClientConfigFileCreatedBecauseDidNotExist" xml:space="preserve">
+  <value>SSH ക്ലയന്റ് കോൺഫിഗറേഷൻ ഫയൽ ഉള്ളടക്കം: {0} സഹിതം സൃഷ്ടിച്ചു കാരണം അത് നിലവിലില്ലായിരുന്നു.</value>
+</data>
+<data name="ExistingMACsConfigurationFoundAndReplaced" xml:space="preserve">
+  <value>നിലവുള്ള 'MACs' കോൺഫിഗറേഷൻ കണ്ടെത്തി മാറ്റി.</value>
+</data>
+<data name="MACsConfigurationNotFoundAddedNew" xml:space="preserve">
+  <value>MACs കോൺഫിഗറേഷൻ കണ്ടെത്തിയില്ല, പുതിയ കോൺഫിഗറേഷൻ ചേർത്തു.</value>
+</data>
+<data name="CheckingSecureMACsInSSHClientUserConfiguration" xml:space="preserve">
+  <value>SSH ക്ലയന്റ് ഉപയോക്തൃ കോൺഫിഗറേഷനിൽ സുരക്ഷിത MACs പരിശോധിക്കുന്നു</value>
+</data>
+<data name="ExistingMACsFoundInUserDirectoryMatchesSecure" xml:space="preserve">
+  <value>ഉപയോക്തൃ ഡയറക്ടറിയിൽ MACs കോൺഫിഗറേഷൻ കണ്ടെത്തി കൂടാതെ അത് സുരക്ഷിത കോൺഫിഗറേഷനുകൾക്ക് യോജിക്കുന്നു.</value>
+</data>
+<data name="MACsConfigurationInUserDirectoryIsDifferent" xml:space="preserve">
+  <value>ഉപയോക്തൃ ഡയറക്ടറിയിൽ ഉള്ള MACs കോൺഫിഗറേഷൻ വ്യത്യസ്തമാണ്: {0}</value>
+</data>
+<data name="CheckingSecureMACsInSSHClientSystemWideConfiguration" xml:space="preserve">
+  <value>SSH ക്ലയന്റ് സിസ്റ്റം-വ്യാപക കോൺഫിഗറേഷനിൽ സുരക്ഷിത MACs പരിശോധിക്കുന്നു</value>
+</data>
+<data name="ExistingMACsFoundInSystemWideConfigurationMatchesSecure" xml:space="preserve">
+  <value>സിസ്റ്റം-വ്യാപക കോൺഫിഗറേഷനിൽ MACs കോൺഫിഗറേഷൻ കണ്ടെത്തി കൂടാതെ അത് സുരക്ഷിത കോൺഫിഗറേഷനുകൾക്ക് യോജിക്കുന്നു.</value>
+</data>
+<data name="MACsConfigurationInSystemWideConfigurationIsDifferent" xml:space="preserve">
+  <value>സിസ്റ്റം-വ്യാപക കോൺഫിഗറേഷനിൽ MACs കോൺഫിഗറേഷൻ വ്യത്യസ്തമാണ്: {0}</value>
+</data>
+<data name="NoSecureMACsFoundInUserAndSystemWideConfigurations" xml:space="preserve">
+  <value>ഉപയോക്താവിന്റെയും സിസ്റ്റം-വ്യാപകവുമായ കോൺഫിഗറേഷനുകളിൽ സുരക്ഷിത MACs കോൺഫിഗറേഷൻ കണ്ടെത്തിയില്ല.</value>
+</data>
+<data name="AttemptingToRemoveMACsFromSSHClientUserConfiguration" xml:space="preserve">
+  <value>SSH ക്ലയന്റ് ഉപയോക്തൃ കോൺഫിഗറേഷനിൽ നിന്ന് MACs കോൺഫിഗറേഷൻ നീക്കം ചെയ്യാൻ ശ്രമിക്കുന്നു</value>
+</data>
+<data name="UserDirectoryNotFoundSkippingRemoval" xml:space="preserve">
+  <value>ഉപയോക്തൃ ഡയറക്ടറി {0} ൽ കണ്ടെത്താനായില്ല കാരണം ഉപയോക്തൃനാമം {1} സാധുവായതല്ല, നീക്കം ചെയ്യൽ ഒഴിവാക്കുന്നു.</value>
+</data>
+<data name="SSHClientConfigurationFileNotFoundNothingToRemove" xml:space="preserve">
+  <value>SSH ക്ലയന്റ് കോൺഫിഗറേഷൻ ഫയൽ കണ്ടെത്തിയില്ല; നീക്കം ചെയ്യാൻ ഒന്നുമില്ല.</value>
+</data>
+<data name="RemovedMACsFromSSHClientUserConfigurationFile" xml:space="preserve">
+  <value>SSH ക്ലയന്റ് ഉപയോക്തൃ കോൺഫിഗറേഷൻ ഫയലിൽ നിന്ന് MACs കോൺഫിഗറേഷൻ നീക്കി.</value>
+</data>
+<data name="NoMACsConfigurationFoundToRemoveInSSHClientUserConfigurationFile" xml:space="preserve">
+  <value>SSH ക്ലയന്റ് ഉപയോക്തൃ കോൺഫിഗറേഷൻ ഫയലിൽ നീക്കം ചെയ്യാൻ MACs കോൺഫിഗറേഷൻ കണ്ടെത്തിയില്ല.</value>
+</data>
 </root>
